# year2

./: .gitignore  readme.md
aisd/1/: main.cpp
labs_JAVA/Java_Lab01/Java_Lab01/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  member-search-index.js  overview-tree.html  package-search-index.js  search.html  type-search-index.js
labsС_CPP/a&sd/: lab01_Sets  lab01_Sets.cpp
labsС_CPP/a&sd/lab02_Classes/: CMakeCache.txt  CMakeLists.txt  Lab02_Classes  Makefile  cmake_install.cmake  example_lin.hpp  lib.hpp  lib_array.hpp  lib_bitset.hpp  lib_struct.hpp  lib_word.hpp  main  main.cpp
labsС_CPP/oevm/: lab_01  lab_01.c  lab_02.c
oop/1/Docs/: Main.html  allclasses-index.html  allpackages-index.html  help-doc.html  index.html  overview-tree.html  package-summary.html  package-tree.html
oop/1/src/: Main.java
sem3/aisd/1/: sharpinskiy-lab01.cpp  sharpinskiy-lab01.docx
sem3/aisd/2/: SetArray.h  SetBitVector.h  SetList.h  SetWord.h  main.cpp  sharpinskiy-lab02.docx  test.c
sem3/aisd/3/: sharpinskiy-lab03.docx  test.cpp  tree.csv
sem3/aisd/4/: AISD_Kudrin3311_lab04.docx  test.cpp
sem3/oop/: .gitignore
sem3/oop/1/: .gitignore
sem3/oop/6/: data.xml  sharpinskiy-lab06.docx
sem3/oop/lab2-5/: sharpinskiy-lab2-5.docx
sem3/orgevm/: ethernet.pptx
sem3/orgevm/1/: double.c  float.c  ld.c  sharpinskiy-lab01.c  sharpinskiy-lab01.docx  sharpinskiy-lab01.drawio
sem3/other/: Шарпинский_Д_А_Экономика.docx  экономика.docx
sem4/: .gitignore
sem4/toe/: Отчёт по лабораторной работе 2.docx  лаба7_протокол.docx
(+73 files in other folders)
